# frappe_visual

./: .caps-rules.md  .editorconfig  .flake8  .pre-commit-config.yaml  BRAND.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  INTEGRATIONS.md  LICENSE  README.md  REUSABLE_PROMPT.md  SCENARIOS.md  SECURITY.md  TEAM_REFERENCE.md  VISUAL_UX_ARCHITECT_PROMPT.md  conftest.py  package-lock.json  package.json  pyproject.toml  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  linters.yml  release.yml
docs/: 3D_EXPANSION_PROPOSAL.md  API_DOCS.md  ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  CONTEXT.md  DOCTYPES_REFERENCE.md  FAQ.md  INTEGRATIONS.md  MARKETPLACE_LISTING.md  PAGES_REFERENCE.md  PERSONAS.md  QUALITY_ASSURANCE.md  README.md  ROADMAP.md  SALES_PITCH.md  SALES_PLAYBOOK.md  SECURITY.md  SESSION_LOG.md  TECHNICAL_SPECS.md  TRAINING.md  TROUBLESHOOTING.md  VISUAL_PAGES_GUIDE.md  _DISCOVERY_REPORT.md  visual_app_design.md
docs/ai/: AGENT_INSTRUCTIONS.md  AI_CONTEXT.md  EMBEDDINGS_READY.md  FUNCTION_CALLING.json  MCP_SERVER_SPEC.md  PROMPTS_LIBRARY.md
frappe_visual/: .eslintrc.js  .semgrep.yml  __init__.py  api.py  caps.py  commands.py  demo.py  desktop_utils.py  exceptions.py  gate.py  hooks.py  install.py  modules.txt  seed.py  tasks.py
marketplace/: listing.json
wiki/: API-Reference.md  Architecture.md  Deployment.md  DocTypes-Reference.md  FAQ.md  Getting-Started.md  Home.md  Permissions.md  Translation-Guide.md
(+766 files in other folders)
