[project]
name = "frappe-visual"
version = "0.1.0"
description = "Graph-based Visual UX Framework for Frappe v16 — Interactive node-graph visualizations, app maps, relationship explorers, and animated diagrams"
authors = [{name = "Arkan Lab", email = "moatazsarapil@gmail.com"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPL-3.0"}
keywords = ["frappe", "visualization", "graph", "cytoscape", "erpnext", "ux", "data-model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: JavaScript",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/ArkanLab/frappe_visual"
Documentation = "https://github.com/ArkanLab/frappe_visual/tree/main/docs"
Repository = "https://github.com/ArkanLab/frappe_visual"
Issues = "https://github.com/ArkanLab/frappe_visual/issues"
Changelog = "https://github.com/ArkanLab/frappe_visual/blob/main/CHANGELOG.md"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench]
frappe-dependencies = ["frappe"]
